force-app/main/default/objects/QCC_Email_Template_Setting__mdt/QCC_Email_Template_Setting__mdt.object-meta.xml
<CustomObject>
    <description>QCC: stores settings for email templates used for Email Customer in Case</description>
    <label>QCC Email Template Setting</label>
    <pluralLabel>QCC Email Template Settings</pluralLabel>
</CustomObject>