force-app/main/default/objects/QCC_Email_Template_Setting__mdt/fields/AutoCloseCase__c.field-meta.xml
<CustomField>
    <fullName>AutoCloseCase__c</fullName>
    <defaultValue>false</defaultValue>
    <description>QCC: controls whether email sent using this email template will automatically close the Case</description>
    <label>Auto Close Case</label>
    <type>Checkbox</type>
</CustomField>