force-app/main/default/objects/QCC_Email_Template_Setting__mdt/fields/Classification__c.field-meta.xml
<CustomField>
    <fullName>Classification__c</fullName>
    <description>QCC: controls the coding level (Classification) of the Case that can use this email template</description>
    <label>Classification</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Catering not assured</fullName>
            </value>
            <value>
                <fullName>Nil catering, ran out of meals</fullName>
            </value>
            <value>
                <fullName>Nil catering whole aircraft</fullName>
            </value>
            <value>
                <fullName>Mention of illness/food poisoning</fullName>
            </value>
            <value>
                <fullName>Did not receive first choice</fullName>
            </value>
            <value>
                <fullName>Presentation/quality of selection</fullName>
            </value>
            <value>
                <fullName>Presentation Quality</fullName>
            </value>
            <value>
                <fullName>Not provided</fullName>
            </value>
            <value>
                <fullName>App/nil in seat IFE</fullName>
            </value>
            <value>
                <fullName>Not functioning</fullName>
            </value>
            <value>
                <fullName>Content variety</fullName>
            </value>
            <value>
                <fullName>Inappropriate content</fullName>
            </value>
            <value>
                <fullName>Legroom/Seat width</fullName>
            </value>
            <value>
                <fullName>Customers of size</fullName>
            </value>
            <value>
                <fullName>Burn in lounge</fullName>
            </value>
            <value>
                <fullName>Customer Concerns – Lounge</fullName>
            </value>
            <value>
                <fullName>Cuts/Abrasions</fullName>
            </value>
            <value>
                <fullName>Fall on escalator/stairs</fullName>
            </value>
            <value>
                <fullName>Illness</fullName>
            </value>
            <value>
                <fullName>Slip/Fall in lounge</fullName>
            </value>
            <value>
                <fullName>Violence in lounge</fullName>
            </value>
            <value>
                <fullName>Other lounge Safety issue</fullName>
            </value>
            <value>
                <fullName>Burn in terminal</fullName>
            </value>
            <value>
                <fullName>Customer concerns – terminal</fullName>
            </value>
            <value>
                <fullName>Customer transport vehicle</fullName>
            </value>
            <value>
                <fullName>Fall on escalator/stairs/travelator</fullName>
            </value>
            <value>
                <fullName>Slip/trip/fall in terminal</fullName>
            </value>
            <value>
                <fullName>Wheelchair in terminal</fullName>
            </value>
            <value>
                <fullName>Other airport safety issue</fullName>
            </value>
            <value>
                <fullName>Broken tooth</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>