force-app/main/default/objects/QCC_Email_Template_Setting__mdt/fields/EmailTemplateName__c.field-meta.xml
<CustomField>
    <fullName>EmailTemplateName__c</fullName>
    <description>QCC: specifies the Salesforce email template name this setting is for</description>
    <label>Email Template Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>