force-app/main/default/objects/QCC_Email_Template_Setting__mdt/fields/Group__c.field-meta.xml
<CustomField>
    <fullName>Group__c</fullName>
    <description>QCC: controls the coding level (Group) of the Case that can use this email template</description>
    <label>Group</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Flight Disruptions</fullName>
            </value>
            <value>
                <fullName>Contact Centre</fullName>
            </value>
            <value>
                <fullName>Departure Airport</fullName>
            </value>
            <value>
                <fullName>Lounges</fullName>
            </value>
            <value>
                <fullName>Arrival Airport</fullName>
            </value>
            <value>
                <fullName>In-Flight</fullName>
            </value>
            <value>
                <fullName>Frequent Flyer</fullName>
            </value>
            <value>
                <fullName>Qantas.com</fullName>
            </value>
            <value>
                <fullName>Corporate</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Delayed Baggage</fullName>
            </value>
            <value>
                <fullName>Damaged Baggage</fullName>
            </value>
            <value>
                <fullName>Booking Cancelled by Customer</fullName>
            </value>
            <value>
                <fullName>Delayed Flight</fullName>
            </value>
            <value>
                <fullName>Delayed or Lost Baggage</fullName>
            </value>
            <value>
                <fullName>Flight Cancelled by Qantas</fullName>
            </value>
            <value>
                <fullName>Personal Property Lost In-flight</fullName>
            </value>
            <value>
                <fullName>Proof of Boarding or No Show</fullName>
            </value>
            <value>
                <fullName>Baggage Delivery Delayed Baggage</fullName>
            </value>
            <value>
                <fullName>Mid Range Repair</fullName>
            </value>
            <value>
                <fullName>Denial</fullName>
            </value>
            <value>
                <fullName>General Wear and Tear or removal of locks email template</fullName>
            </value>
            <value>
                <fullName>Mid Range Letter</fullName>
            </value>
            <value>
                <fullName>Finalisation</fullName>
            </value>
            <value>
                <fullName>Request Copy of Tax Invoice</fullName>
            </value>
            <value>
                <fullName>Blank Template</fullName>
            </value>
            <value>
                <fullName>Acknowledgement Template</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>