force-app/main/default/objects/QCC_Email_Template_Setting__mdt/fields/SubCategory__c.field-meta.xml
<CustomField>
    <fullName>SubCategory__c</fullName>
    <description>QCC: controls the coding level (Sub Category) of the Case that can use this email template</description>
    <label>Sub Category</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Beverage Payment</fullName>
            </value>
            <value>
                <fullName>Beverage Quality/Selection</fullName>
            </value>
            <value>
                <fullName>Catering Quality/Selection</fullName>
            </value>
            <value>
                <fullName>Menu Select Meal not Provided</fullName>
            </value>
            <value>
                <fullName>Special Meal Quality/Provision</fullName>
            </value>
            <value>
                <fullName>Q Streaming</fullName>
            </value>
            <value>
                <fullName>Content</fullName>
            </value>
            <value>
                <fullName>Functionality</fullName>
            </value>
            <value>
                <fullName>Bassinette Availability</fullName>
            </value>
            <value>
                <fullName>Comfort/Functionality</fullName>
            </value>
            <value>
                <fullName>Seating Allocation</fullName>
            </value>
            <value>
                <fullName>Prepaid seat not provided</fullName>
            </value>
            <value>
                <fullName>Assistance/Supervision</fullName>
            </value>
            <value>
                <fullName>Fees/Cost/Price</fullName>
            </value>
            <value>
                <fullName>In-Flight Seating</fullName>
            </value>
            <value>
                <fullName>Staff Assistance</fullName>
            </value>
            <value>
                <fullName>Poor Communication</fullName>
            </value>
            <value>
                <fullName>Agent booking</fullName>
            </value>
            <value>
                <fullName>Aircraft cleanliness</fullName>
            </value>
            <value>
                <fullName>Aircraft Type</fullName>
            </value>
            <value>
                <fullName>Airport co-ordination</fullName>
            </value>
            <value>
                <fullName>Airports</fullName>
            </value>
            <value>
                <fullName>Applied correctly</fullName>
            </value>
            <value>
                <fullName>Applied incorrectly</fullName>
            </value>
            <value>
                <fullName>Assistance</fullName>
            </value>
            <value>
                <fullName>Bid Now Product</fullName>
            </value>
            <value>
                <fullName>Boarding Process</fullName>
            </value>
            <value>
                <fullName>Booking Errors</fullName>
            </value>
            <value>
                <fullName>Cabin baggage policy</fullName>
            </value>
            <value>
                <fullName>Car did not arrive</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>