force-app/main/default/objects/QCC_Email_Template_Setting__mdt/fields/TemplateGroup__c.field-meta.xml
<CustomField>
    <fullName>TemplateGroup__c</fullName>
    <description>QCC: controls the template group used by Conga Composer</description>
    <label>Template Group</label>
    <length>255</length>
    <type>Text</type>
</CustomField>