force-app/main/default/objects/QCC_Email_Template_Setting__mdt/fields/TemplateOption__c.field-meta.xml
<CustomField>
    <fullName>TemplateOption__c</fullName>
    <description>QCC: specifies which template option this email template is for based on the selection option when clicking &apos;Email Customer&apos; on Case</description>
    <label>Template Option</label>
    <length>255</length>
    <type>Text</type>
</CustomField>