force-app/main/default/objects/QCC_Email_Template_Setting__mdt/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <description>QCC: controls the coding level (Type) of the Case that can use this email template</description>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Complaint</fullName>
            </value>
            <value>
                <fullName>Compliment</fullName>
            </value>
            <value>
                <fullName>Insurance Letter</fullName>
            </value>
            <value>
                <fullName>Query</fullName>
            </value>
            <value>
                <fullName>Medical-Assistance Provided</fullName>
            </value>
            <value>
                <fullName>Medical-Patient</fullName>
            </value>
            <value>
                <fullName>On the Spot Recovery</fullName>
            </value>
            <value>
                <fullName>Baggage</fullName>
            </value>
            <value>
                <fullName>Further Action Required</fullName>
            </value>
            <value>
                <fullName>Events</fullName>
            </value>
            <value>
                <fullName>ScheduledEmailTemplate</fullName>
            </value>
            <value>
                <fullName>Medical Assistance Provided</fullName>
            </value>
            <value>
                <fullName>Ineligible Insurance Letter</fullName>
            </value>
            <value>
                <fullName>Acknowledgement Template</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>