force-app/main/default/objects/QCC_Email_Template_Setting__mdt/listViews/all_fields.listView-meta.xml
<ListView>
    <fullName>all_fields</fullName>
    <columns>MasterLabel</columns>
    <columns>DeveloperName</columns>
    <columns>NamespacePrefix</columns>
    <columns>Category__c</columns>
    <columns>Classification__c</columns>
    <columns>Group__c</columns>
    <columns>SubCategory__c</columns>
    <columns>TemplateGroup__c</columns>
    <columns>TemplateOption__c</columns>
    <columns>Type__c</columns>
    <columns>EmailTemplateName__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Group__c</field>
        <operation>equals</operation>
        <value>Delayed Flight</value>
    </filters>
    <label>all fields</label>
    <language>en_US</language>
</ListView>