force-app/main/default/objects/QCC_Email_Template_Setting__mdt/listViews/All_with_Email_Template_Name.listView-meta.xml
<ListView>
    <fullName>All_with_Email_Template_Name</fullName>
    <columns>MasterLabel</columns>
    <columns>EmailTemplateName__c</columns>
    <columns>Type__c</columns>
    <columns>Group__c</columns>
    <columns>Category__c</columns>
    <columns>SubCategory__c</columns>
    <columns>Classification__c</columns>
    <columns>TemplateGroup__c</columns>
    <columns>TemplateOption__c</columns>
    <columns>AutoCloseCase__c</columns>
    <filterScope>Everything</filterScope>
    <label>All with Email Template Name</label>
    <language>en_US</language>
</ListView>